Guard against unprotected javaVM pointer usage

Task-number: QTBUG-59010
Change-Id: Iea5f160718fd668665d4870fe1b82d608cf13d8c
Reviewed-by: Paolo Angelelli <paolo.angelelli@qt.io>